# Agent_Search

./: .env.example  .gitignore  README.md  package-lock.json
.streamlit/: config.toml
Prototypes/AI_Agent_for_Enterprise_Research/: README_backend.md
Prototypes/AI_Agent_for_Enterprise_Research/Backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  tools.py
Prototypes/AI_Agent_for_Enterprise_Research/Frontend/: package-lock.json  package.json
Prototypes/AI_Agent_for_Enterprise_Research/Frontend/src/: App.jsx
Prototypes/AI_Agent_for_Enterprise_Research/Frontend/src/Components/AIResearchAssistant/: AIResearchAssistant.jsx
nvidia-universal-frontend/: package-lock.json  package.json
nvidia-universal-frontend/src/app/: NvidiaLanding.css  layout.js  page.js
nvidia-universal-frontend/src/app/ai-blog-creator/: page.js
nvidia-universal-frontend/src/app/ai-pdf-to-podcast/: page.js
nvidia-universal-frontend/src/app/ai-virtual-assistant/: layout.js  page.js
nvidia-universal-frontend/src/app/ai-virtual-assistant/chat/: page.js
nvidia-universal-frontend/src/app/deep-fake/: page.js
nvidia-universal-frontend/src/app/poc/: PocPage.css  page.js
nvidia-universal-frontend/src/app/podcastgenerator/: page.js
nvidia-universal-frontend/src/app/protien-structure/: ProtienStructure.css  page.jsx
nvidia-universal-frontend/src/app/research-knowledge-agent/: page.js
nvidia-universal-frontend/src/assets/: assets.js
nvidia-universal-frontend/src/components/AIBlogCreator/: AIBlogCreator.css  AIBlogCreator.jsx
nvidia-universal-frontend/src/components/AI_Virtual_Assistant_Nvidia/AdminPanel/: AdminPanel.css  AdminPanel.jsx
nvidia-universal-frontend/src/components/AI_Virtual_Assistant_Nvidia/ChatInterface/: ChatInterface.css  ChatInterface.jsx
nvidia-universal-frontend/src/components/AI_Virtual_Assistant_Nvidia/Navigation/: Navigation.css  Navigation.jsx
nvidia-universal-frontend/src/components/DeepFake/FileUpload/: FileUpload.css  FileUpload.jsx
nvidia-universal-frontend/src/components/FloatingButton/: FloatingButtons.css  FloatingButtons.jsx
nvidia-universal-frontend/src/components/PocHeader/: PocHeader.css  PocHeader.js
nvidia-universal-frontend/src/components/PodcastGenerator/: PodcastGenerator.css  PodcastGenerator.jsx
nvidia-universal-frontend/src/components/Protien_Structure/AlphaFold/: AlphaFold.css  AlphaFold.jsx
nvidia-universal-frontend/src/components/Protien_Structure/BoltzStructure/: BoltzStructure.jsx
nvidia-universal-frontend/src/components/Protien_Structure/Navbar/: Navbar.css  Navbar.jsx
nvidia-universal-frontend/src/components/ai-pdf-to-podcast/: QuerySection.css  QuerySection.jsx  UploadSection.css  UploadSection.jsx
nvidia-universal-frontend/src/components/ai_research_agent/: AIResearchAssistant.css  AIResearchAssistant.jsx
nvidia-universal-frontend/src/config/: db.js
nvidia-universal-frontend/src/utils/: ProtienExampleSequence.js  nvidia_poc_list.js
