[project]
name = "protos-ai"
version = "0.1.0"
description = "Repository for AI prototypes, small projects, and proof-of-concept implementations"
authors = [{ name = "Your Name", email = "abhishek@genaiprotos.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "numpy>=1.24.0,<2",
    "pandas>=2.0.0,<3",
    "matplotlib>=3.7.0,<4",
    "scikit-learn>=1.2.0,<2",
    "langchain",
    "langchain-openai",
    "langchain-groq",
    "langchain-community",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "unstructured[pdf]",
    "langchain-unstructured",
    "faiss-cpu",
    "langchain-google-genai",
    "gunicorn==20.1.0",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.36",
    "mysql-connector-python==9.1.0",
    "langchain-aws",
    "langchain-anthropic",
    "boto3",
    "cryptography>=43.0.1,<44",
    "argon2-cffi==21.3.0",
    "argon2-cffi-bindings==21.2.0",
    "regex>=2024.9.11,<2025",
    "psycopg2-binary",
    "huggingface_hub",
    "openpyxl",
    "gspread",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "html2text",
    "PyMuPDF",
    "pillow",
    "requests",
    "itsdangerous",
    "langchain-pinecone",
    "langchain-cohere",
    "streamlit>=1.44.1,<2",
    "crewai>=0.114.0,<0.115",
    "agno==1.7.11",
    "google-genai>=1.2.0",
    "exa-py>=1.9.0",
    "tavily-python>=0.5.4",
    "markitdown>=0.1.1",
    "sseclient-py>=1.8.0",
    "reportlab>=4.4.0",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "tzlocal>=5.3.1",
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "composio-agno>=0.7.16",
    "duckdb>=1.3.0",
    "firecrawl-py>=2.7.0",
    "fpdf>=1.7.2",
    "langchain-core>=0.3.61",
    "openai>=1.82.0",
    "pyjwt>=2.10.1",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "reductoai>=0.7.0",
    "aiofiles>=24.1.0",
    "langchain-experimental>=0.3.4",
    "libmagic>=1.0",
    "langchain-nvidia-ai-endpoints>=0.3.18",
    "llama-cloud-services>=0.6.54",
    "pymongo>=4.15.0",
    "llama-parse>=0.6.54",
    "sse-starlette>=3.0.2",
    "elevenlabs>=2.16.0",
    "firecrawl>=4.4.0",
    "tabulate>=0.9.0",
    "docling>=2.60.1",
    "xpander-sdk>=2.0.104",
    "lightrag-hku",
    "mineru>=2.6.6",
    "linkup-sdk>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "black>=23.3.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.0.0,<7",
    "mypy>=1.3.0,<2",
    "pre-commit>=3.3.1,<4",
    "jupyter>=1.0.0,<2",
    "pytest-cov>=4.1.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["protos_ai"]

[tool.hatch.build.targets.wheel]
include = ["protos_ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.uv.sources]
lightrag-hku = { git = "https://github.com/HKUDS/LightRAG.git", rev = "a98b814df51e9b1e5bf94f90ac" }
